# net-asteroid

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build  build-web  watch  watch-web
assets/shapes/: meteor-big1.json  player-ship.json
assets/sprites/: fire.ase  player_ship_blue.ase
bgame/: CMakeLists.txt
bgame/include/bgame/: allocator.h  app.h  asset.h  collision.h  dj.h  draw_list.h  easing.h  entrypoint.h  handle.h  reloadable.h  scene.h  shader.h  str.h  transform.h  ui.h  utils.h  uxn.h
bgame/include/bgame/allocator/: frame.h  tracked.h
bgame/include/bgame/asset/: 9patch.h  audio.h  binary.h  collision_shape.h  font.h  image.h  shader.h  sprite.h
bgame/include/bgame/ui/: 9patch.h  rich_text.h
bgame/src/: allocator.c  asset.c  collision.c  dj.c  entrypoint.c  handle.c  internal.c  internal.h  libs.c  loader.c  loader_interface.h  loader_stub.c  log.c  scene.c  shader.c  ui.c
bgame/src/allocator/: cute_framework.c  frame.c  tracked.c
bgame/src/asset/: 9patch.c  audio.c  binary.c  collision_shape.c  font.c  image.c  shader.c  sprite.c
bgame/src/ui/: 9patch.c  rich_text.c
cmake/: linux.cmake
src/: CMakeLists.txt  assets.c  assets.h  asteroid.c  asteroid.h  background.c  background.h  ecs.c  ecs.h  fs.c  fs.h  globals.c  globals.h  libs.c  main.c  slopsync.c  slopsync.h  spatial_hash.c  spatial_hash.h  ssync_comps.c  ssync_schema.h  templates.h  ui.h  wrap_around.c
src/scenes/: main_game.c  main_menu.c  test_background.c  test_collision_api.c  test_spatial_hash.c
src/shaders/: tiled.glsl
src/systems/: collider_maker.c  collision.c  collision.h  collision_response.c  debug_control.c  debug_control.h  linear_motion.c  offscreen_cull.c  ship_controller.c  ship_render.c  snap_transform.c  sprite.c  wrap_around.c
